Fix z-index problem

--- a/web-frontend/modules/core/assets/scss/components/card/multiple_collaborators.scss
+++ b/web-frontend/modules/core/assets/scss/components/card/multiple_collaborators.scss
@@ -17,6 +17,7 @@
   height: 24px;
   margin: 5px 4px 5px 0;
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
 
   &:not(:last-child) {
