--- a/web-frontend/modules/core/assets/scss/components/fields/multiple_collaborators.scss
+++ b/web-frontend/modules/core/assets/scss/components/fields/multiple_collaborators.scss
@@ -2,6 +2,7 @@
   height: 24px;
   margin: 5px 4px 5px 4px;
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
 
   &:not(:last-child) {
@@ -24,8 +25,7 @@
   background-color: $color-primary-500;
   border-radius: 100%;
   margin-left: 0;
-  margin-right: -12px;
-  z-index: 1;
+  margin-right: -14px;
 
   @include center-text(24px, 12px);
 }
